# nessy

./: .gitignore  .gitmodules  Cargo.toml
src/: app.rs  apu.rs  cpu.rs  dma.rs  input.rs  joystick.rs  lib.rs  main.rs  mapper.rs  nes.rs  nesbus.rs  ntscpalette.pal  ppu.rs  processor.rs  render.rs  renderer.rs  rom.rs  shader.wgsl  util.rs
src/cpu/: instruction.rs
src/mapper/: mapper0.rs  mapper2.rs  nrom.rs
src/ppu/: pixel_buffer.rs  renderer.rs
src/processor/: apu.rs  dma.rs
test_roms/: klaus2m_functional.hex
tests/: nestest.rs
