[package]
name = "nessy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu_6502 = { git = "https://github.com/JuergenFranziskus/cpu_6502.git" }
wgpu = "0.17.0"
winit = "0.28.6"
pixely = { git = "https://github.com/JuergenFranziskus/pixely.git" }
futures = "0.3.28"
